syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";

message SumRequest{
    int32 first_num=1;
    int32 second_num=2;
}

message SumResponse{
    int32 result=1;
}

message PrimeRequest{
    int32 num=1;
}

message PrimeResponse{
    int32 result=1;
}

message AverageRequest{
    int32 num=1;
}

message AverageResponse{
    float result=1;
}

message MaxnumberRequest{
    int32 num=1;
}

message MaxnumberResponse{
    int32 result=1;
}

service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse){};
    rpc Prime(PrimeRequest) returns (stream PrimeResponse){};
    rpc Average(stream AverageRequest) returns (AverageResponse){};
    rpc Maxnumber(stream MaxnumberRequest) returns (stream MaxnumberResponse){};
}

